refactor(DOCKER): remove unuse comment